--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
+    "prettier": "^3.3.2",
+    "prettier-plugin-svelte": "^3.2.5",
     "svelte": "^4.2.12",
     "vite": "^5.2.0"
   }
